--- a/index.html
+++ b/index.html
@@ -606,9 +606,10 @@
         </div>
         <div class="panel2">
             <p>&copy; <a href="#">Copyright 2019 AISSMS IOIT College in Pune</a> Powered by <a href="#">Tinfosystem</a></p>
-            <p>Disclaimer: This website is a student project created for educational purposes only. We are not affiliated with
-               Ruby Hall Clinic, and their logo and name are used here for academic demonstration only. All rights to the
-               original logo and branding belong to their respective owners.
+            
+            <p>
+                Disclaimer: This website is a student project created for educational purposes only. AISSMS IOIT logo and name are used here for academic demonstration only. All rights to the
+                original logo and branding belong to their respective owners.
             </p>
         </div>
     </footer>
